--- a/DWT_dashboard.ipynb
+++ b/DWT_dashboard.ipynb
@@ -21,11 +21,8 @@
     "DWT_Dashboard\n",
     "Interactive file processing and seizure detection\n",
     "Claire Seibold\n",
-    "6/18/2019\n",
     "\n",
-    "The default parameters are set, please enter a file path for the text file to be processed. \n",
-    "\n",
-    "If this is your first time running the notebook today, make sure that the Reset Cache checkbox is selected. After the initial run, this can be unchecked to speed things up.\n"
+    "The default parameters are set for best results, please enter a file path and selet 'Reset Cache' for the text file to be processed. After the initial run, 'Reset Cache' can be unchecked to speed things up.\n"
    ]
   },
   {
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -131,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "8.9"
+       "10.0"
       ]
      },
      "metadata": {},
@@ -160,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -185,7 +182,7 @@
     {
      "data": {
       "text/plain": [
-       "35.0"
+       "40.0"
       ]
      },
      "metadata": {},
@@ -414,6 +411,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.execute_cell_range(IPython.notebook.get_selected_index()+1, IPython.notebook.ncells())"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.execute_cell_range(IPython.notebook.get_selected_index()+1, IPython.notebook.ncells())"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -428,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -485,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -516,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -551,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -616,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -645,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -724,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -760,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -785,26 +806,62 @@
       "\n",
       "\n",
       "File /Volumes/disk2s1/Expesicor/Sync/SampleFiles/0023.txt\n",
-      "2 channels were processed over a length of 180.00 minutes \n",
+      "2 channels exist over a length of 118.72 minutes \n",
       "\n",
       "30.000 Minutes Processed\tChannel: 1\tTimestamp: 9:56\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 9:57\t\tFreq D: 0,[]\n",
-      "\tChannel: 1\tTimestamp: 9:57\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 9:58\t\tFreq D: 0,[]\n",
-      "\tChannel: 1\tTimestamp: 9:59\t\tFreq D: 0,[]\n",
-      "\tChannel: 1\tTimestamp: 10:00\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 9:58\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 10:01\t\tFreq D: 0,[]\n",
-      "\tChannel: 1\tTimestamp: 10:02\t\tFreq D: 0,[1]\n",
+      "\tChannel: 1\tTimestamp: 10:01\t\tFreq D: 0,[1]\n",
       "\tChannel: 1\tTimestamp: 10:02\t\tFreq D: 0,[1]\n",
       "\tChannel: 1\tTimestamp: 10:03\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 10:04\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 10:05\t\tFreq D: 0,[]\n",
-      "\tChannel: 1\tTimestamp: 10:05\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:06\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 10:06\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 10:07\t\tFreq D: 0,[]\n",
       "\tChannel: 1\tTimestamp: 10:08\t\tFreq D: 0,[]\n",
-      "\tChannel: 2\tTimestamp: 9:42\t\tFreq D: 0,[]\n",
-      "47.000 Minutes Processed"
+      "\tChannel: 2\tTimestamp: 9:42\t\tFreq D: 0,[1, 2]\n",
+      "\tChannel: 2\tTimestamp: 9:43\t\tFreq D: 0,[]\n",
+      "\tChannel: 2\tTimestamp: 9:44\t\tFreq D: 0,[]\n",
+      "60.000 Minutes Processed\tChannel: 1\tTimestamp: 10:26\t\tFreq D: 0,[0, 0]\n",
+      "\tChannel: 1\tTimestamp: 10:27\t\tFreq D: 0,[0]\n",
+      "\tChannel: 1\tTimestamp: 10:28\t\tFreq D: 0,[0]\n",
+      "\tChannel: 1\tTimestamp: 10:28\t\tFreq D: 0,[0]\n",
+      "\tChannel: 1\tTimestamp: 10:30\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:31\t\tFreq D: 0,[1]\n",
+      "\tChannel: 1\tTimestamp: 10:32\t\tFreq D: 0,[1]\n",
+      "\tChannel: 1\tTimestamp: 10:33\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:34\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:35\t\tFreq D: 0,[0]\n",
+      "\tChannel: 1\tTimestamp: 10:35\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:36\t\tFreq D: 0,[0]\n",
+      "\tChannel: 1\tTimestamp: 10:37\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:38\t\tFreq D: 0,[]\n",
+      "\tChannel: 2\tTimestamp: 10:12\t\tFreq D: 0,[1, 2]\n",
+      "\tChannel: 2\tTimestamp: 10:13\t\tFreq D: 0,[]\n",
+      "\tChannel: 2\tTimestamp: 10:14\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:09\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:10\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:11\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:13\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:15\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:24\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:24\t\tFreq D: 0,[]\n",
+      "\tChannel: 1\tTimestamp: 10:29\t\tFreq D: 0,[]\n",
+      "67.667 Minutes Processed"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-126-fcc4e242caa8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m                     \u001b[0mProcessLine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m                     \u001b[0mminutesSinceStart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGetTimeSinceStart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfirst_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m                     \u001b[0;32mif\u001b[0m \u001b[0mprogress\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mDWT_blocksize\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#process DWT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m                         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                         \u001b[0mProcessDWT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInclude_Spikes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
